objects/APTS_ZPND_Submission__e.object
<CustomObject>
    <fields>
        <fullName>Order_ID__c</fullName>
        <label>Order ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_ID__c</fullName>
        <label>Proposal ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSD_ID__c</fullName>
        <label>SSD ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>APTS ZPND Submission</label>
    <pluralLabel>APTS ZPND Submission</pluralLabel>
</CustomObject>